# Aurora-for-Audacity

./: .gitignore  .gitmodules  README.md  build-notes.md  src-updates.md
docs/: manual-en.md  manual-it.md
mac/: AuroraConfig.xcconfig  Info.plist  build-notes.md
mac-xcode-11/: AuroraConfig.xcconfig
mac-xcode-11/Aurora.xcodeproj/: project.pbxproj
mac/Aurora-For-Audacity.xcworkspace/: contents.xcworkspacedata
mac/Aurora.xcodeproj/: project.pbxproj
mac/Aurora.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
mac/Aurora.xcodeproj/project.xcworkspace/xcuserdata/mhamilt.xcuserdatad/: UserInterfaceState.xcuserstate
mac/Aurora.xcodeproj/xcshareddata/xcschemes/: Aurora.xcscheme
mac/DerivedData/Aurora/: info.plist
mac/DerivedData/Aurora/Index.noindex/DataStore/v5/records/00/: valtext.h-1DPCU1J7EN00
mac/DerivedData/Aurora/Index.noindex/DataStore/v5/records/05/: frame.h-2I1UK7JQDSY05
mac/DerivedData/Aurora/Index.noindex/DataStore/v5/records/0D/: textdlgg.h-102UOOVBAYK0D
mac/DerivedData/Aurora/Index.noindex/DataStore/v5/records/0J/: hash.h-1Z17HZVRUJ20J
mac/DerivedData/Aurora/Index.noindex/DataStore/v5/records/0Q/: chkconf.h-1Q5CFZEBJRZ0Q
mac/DerivedData/Aurora/Index.noindex/DataStore/v5/records/0T/: memory.h-PYLDZMM25F0T
mac/DerivedData/Aurora/Index.noindex/DataStore/v5/records/0Z/: build.h-GFCX621QPJ0Z  movable.h-28BAWEOC3HD0Z
mac/DerivedData/Aurora/Index.noindex/DataStore/v5/units/: afaxis.o-2055DR7167CLE  component.o-3TSV5YMYRJG3T
mac/DerivedData/ModuleCache.noindex/: Session.modulevalidation
mac/scripts/: path_update.sh
mod-aurora/: AuroraModule.cpp  AuroraModule.h  CMakeLists.txt
mod-aurora/AcParameters/: AcParameters.h  AcParametersBase.cpp  AcParametersBase.h  AcParametersData.h  AcParametersEffect.cpp  AcParametersEffect.h  AcParametersExports.cpp  AcParametersExports.h  AcParametersPlot.cpp  AcParametersPlot.h  AcParametersSpectrum.h  AcParametersTrack.cpp  AcParametersTrack.h  AcParametersUi.cpp  AcParametersUi.h  AcParametersVersion.h  AcTResults.cpp  AcTResults.h  AcTSchroederDecay.cpp  AcTSchroederDecay.h
mod-aurora/AcParameters/src/: AcParametersEffect.cpp
mod-aurora/Convolver/: AuroraConvolver.cpp  AuroraConvolver.h  ConvolverDialogs.cpp  ConvolverDialogs.h  ConvolverEffect.cpp  ConvolverEffect.h  ConvolverPlot.cpp  ConvolverPlot.h  ConvolverUi.cpp  ConvolverUi.h  TrackProperties.cpp  TrackProperties.h  convolver.cpp  convolver.h  multivolver.cpp  multivolver.h
mod-aurora/Convolver/res/: down.h  down.xpm  left.h  left.xpm  right.h  right.xpm  up.h  up.xpm
mod-aurora/Convolver/src/: ConvolverEffect.cpp
mod-aurora/Dummy/: DummyAcParameters.cpp  DummyAcParameters.h  DummyAnalyse.cpp  DummyAnalyse.h  DummyConvolver.cpp  DummyConvolver.h  DummyGenerator.cpp  DummyGenerator.h  DummyKirkeby.cpp  DummyKirkeby.h  DummySineSweepGenerator.cpp  DummySineSweepGenerator.h  DummySpeechTransmissionIndex.cpp  DummySpeechTransmissionIndex.h  DummyTimeHistoryAnalyzer.cpp  DummyTimeHistoryAnalyzer.h  DummyXFunctions.cpp  DummyXFunctions.h
mod-aurora/Kirkeby/: KirkebyBase.h  KirkebyDialogs.cpp  KirkebyEffect.cpp  KirkebyEffect.h  KirkebyUi.cpp
mod-aurora/STI/src/: StiEffect.cpp  StiEffect.h
mod-aurora/SineSweepGenerator/: SineSweep.h  SineSweepGeneratorDialog.cpp  SineSweepGeneratorDialog.h
mod-aurora/SineSweepGenerator/src/: SineSweepEffect.cpp  SineSweepEffect.h  SineSweepGenerator.h  SineSweepUi.cpp
mod-aurora/SpeechTransmissionIndex/: ModulationTransferFunctionsTable.cpp  ModulationTransferFunctionsTable.h  STI.cpp  STI.h  STIData.cpp  STIData.h  STIEffect.cpp  STIEffect.h  STIExports.cpp  STIExports.h  STIPlot.cpp  STIPlot.h  STIResults.cpp  STIResults.h  STISpectrum.cpp  STISpectrum.h  STISpectrumDialog.cpp  STISpectrumDialog.h  STISpectrumWxDialog.cpp  STISpectrumWxDialog.h  STITrack.cpp  STITrack.h  STIUi.cpp  STIUi.h
mod-aurora/TimeHistoryAnalyzer/: TArrayOfThAnalyzerAudioTracks.h  ThAnalyzerData.cpp  ThAnalyzerData.h  ThAnalyzerDialogs.cpp  ThAnalyzerDialogs.h  ThAnalyzerEffect.cpp  ThAnalyzerEffect.h  ThAnalyzerExports.cpp  ThAnalyzerExports.h  ThAnalyzerPlot.cpp  ThAnalyzerPlot.h  ThAnalyzerTrack.cpp  ThAnalyzerTrack.h  ThAnalyzerUi.cpp  ThAnalyzerUi.h  TimeHistoryAnalyzer.cpp  TimeHistoryAnalyzer.h
mod-aurora/XFunctions/: XFunctionsArt.cpp  XFunctionsArt.h  XFunctionsData.cpp  XFunctionsData.h  XFunctionsDialogs.cpp  XFunctionsDialogs.h  XFunctionsEffect.cpp  XFunctionsEffect.h  XFunctionsExports.cpp  XFunctionsExports.h  XFunctionsPlot.cpp  XFunctionsPlot.h  XFunctionsUi.cpp  XFunctionsUi.h  correlator.cpp  correlator.h
mod-aurora/include/: audtypes.h  aurora.h  version.h
mod-aurora/src/: ArtProvider.cpp  ArtProvider.h  Audio.cpp  Audio.h  Axis.cpp  Axis.h  Chart.cpp  Chart.h  Complex.cpp  Complex.h  Config.cpp  Config.h  DataHolder.h  DataPlot.cpp  DataPlot.h  Exports.cpp  Exports.h  Filter.cpp  Filter.h  GTProgressIndicator.cpp  GTProgressIndicator.h  Plot.cpp  Plot.h  SCFirWin.cpp  SCFirWin.h  SCOctaveBandAnalysis.cpp  SCOctaveBandAnalysis.h  SCOctaveBandFilter.cpp  SCOctaveBandFilter.h  SCOctaveBandFir.cpp  SCOctaveBandFir.h  SCSignalWindows.cpp  SCSignalWindows.h  Scope.cpp  Scope.h  Spectrum.cpp  Spectrum.h  UIComponents.cpp  UIComponents.h  Vector.cpp  (+13 more)
module/mod-aurora/: AuroraModule.cpp
module/mod-aurora/SineSweepGenerator/src/: SineSweepEffect.h  SineSweepGenerator.cpp  SineSweepUi.h
module/mod-aurora/include/: aurora.h  commdefs.h  wxcmn.h
module/mod-aurora/src/: afaxis.cpp  afaxis.h  afconfig.cpp  afexports.cpp  component.h  firwin.cpp  gpfuncts.cpp  iir-taps.cpp  octfilt.cpp
scripts/: update-date.sh
src/AcParameters/src/: AcParametersEffect.h
src/Common/include/: audtypes.h  commdefs.h
src/Common/src/: AuroraModule.cpp  AuroraModule.h  afaxis.cpp  afaxis.h  component.cpp  component.h
src/Convolver/src/: ConvolverEffect.h
src/Kirkeby/src/: KirkebyEffect.cpp  KirkebyEffect.h
src/SineSweepGenerator/src/: SineSweepEffect.cpp  SineSweepEffect.h
src/TimeHistoryAnalyzer/src/: ThAnalyzerEffect.cpp
src/XFunctions/src/: XFunctionsEffect.cpp
(+322 files in other folders)
